// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/admin/database/ColumnValidation Not required column validation 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div>
      <div
        class="rule-enable"
      >
        <div
          class="p-mr-2 p-checkbox p-component"
        >
          <div
            class="p-hidden-accessible"
          >
            <input
              id="required-enable"
              name="rule-enable"
              type="checkbox"
              value=""
            />
          </div>
           
          <div
            class="p-checkbox-box"
            role="checkbox"
          >
            <span
              class="p-checkbox-icon"
            />
          </div>
        </div>
         
        <label
          for="required-enable"
        >
          Required column
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots components/admin/database/ColumnValidation Required column validation 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div>
      <div
        class="rule-enable"
      >
        <div
          class="p-mr-2 p-checkbox p-component p-checkbox-checked"
        >
          <div
            class="p-hidden-accessible"
          >
            <input
              id="required-enable"
              name="rule-enable"
              type="checkbox"
              value=""
            />
          </div>
           
          <div
            aria-checked="true"
            class="p-checkbox-box p-highlight"
            role="checkbox"
          >
            <span
              class="p-checkbox-icon pi pi-check"
            />
          </div>
        </div>
         
        <label
          for="required-enable"
        >
          Required column
        </label>
      </div>
    </div>
  </div>
</div>
`;
